Fix share button appearing off-screen on small mobiles (#83)
* Make share button fit on very small screens by making the link field smaller; and fix console error when closing instructions during the copy success animation.

* bump version

--- a/src/components/share/Share.scss
+++ b/src/components/share/Share.scss
@@ -11,6 +11,7 @@
 
   input {
     flex-grow: 1;
+    min-width: 0;
   }
 
   button {
@@ -24,15 +25,5 @@
     &.success {
       background-color: $theme-color-green;
     }
-  }
-
-  @keyframes slideDown {
-    from {opacity: 0; top: 0}
-    to {opacity: 1; top: $gel-spacing-unit}
-  }
-
-  @keyframes slideUp {
-    from {opacity: 1; top: $gel-spacing-unit}
-    to {opacity: 0; top: 0}
   }
 }
